# db-insight

./: .env.sample  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: 725f827efb3e_initial_migration_for_user_and_db_.py
database/: db.py
models/: __init__.py  base_model.py  db_credentials.py  user.py
routes/: db_operations.py  users.py
schemas/: db_operations.py  users_schema.py
utils/: constants.py  openapi_tags_metadata.py
views/: users.py
